# timeline

./: .cz-config.js  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV.md  README.md  ROADMAP.md  SCENARIO.md  TODO.md  biome.json  bun.lockb  cursor-rules.mdc  deno.json  electron-builder.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.server.json  turbo.json  types.ts  vitest.config.ts  vitest.setup.ts  vitest.unit.config.ts  vitest.workspace.ts
.cursor/: ai-prompt.mdc  cursor-rules.mdc  mcp.json
.cursor/rules/: react-ts.mdc  rust.mdc
.storybook/: main.ts  preview-head.html  preview.ts
apps/native/: .gitignore  index.html  package.json
apps/native/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/native/src-tauri/capabilities/: main.json
apps/native/src-tauri/src/: commands.rs  lib.rs  main.rs  media_manager.rs
apps/native/src-tauri/src/media/: ffmpeg.rs  mod.rs
apps/web/: components.json  eslint.config.js  next.config.mjs  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
docs/: FILES-LIST.md  MEDIA.md  README.md  browser.md  media-player.md  options.md  timeline-state.md  timeline.md  top-nav-bar.md
docs/api/: recording-api.md
docs/architecture/: components.md  state-machines.md
docs/components/: browser.md  media-player.md  options.md  timeline.md  top-nav-bar.md
scripts/: setup-python.sh
scripts/python/: detect_objects.py  generate_screenshots.py  (+1 more)
(+675 files in other folders)
